js/src/jit-test/tests/binast/invalid/param-index-overflow.binjs
BINJS
[
GRAMMAR
]
identity
;
"
BindingIdentifier
(
AssertedDeclaredName
AssertedParameterScope
>
AssertedPositionalParameterName2AssertedScriptGlobalScope
AssertedVarScope0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
Script
[
STRINGS
]
identity
;
a
f
var
[
TREE
]
identity
;
L
